# atnf-chat

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN-vercel-ai-gateway.md  README.md  docker-compose.yml  package-lock.json  project_brief.md  pyproject.toml
atnf_chat/: __init__.py  cli.py  config.py
atnf_chat/analysis/: __init__.py
atnf_chat/api/: __init__.py  app.py  chat.py  rate_limit.py
atnf_chat/core/: __init__.py  catalogue.py  dsl.py  schema.py  validation.py
atnf_chat/llm/: __init__.py  providers.py
atnf_chat/tools/: __init__.py  analysis.py  definitions.py  derived.py  query.py
atnf_chat/visualization/: __init__.py  plots.py
benchmarks/: __init__.py  evaluate.py  integration.py  pulsar_queries.json
docs/: PLAN-free-api-fallback.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ApiKeyModal.tsx  Chat.tsx  ChatInput.tsx  ChatMessage.tsx  Header.tsx  Plot.tsx  WelcomeScreen.tsx  index.ts
frontend/src/lib/: api.ts  useApiKey.ts
frontend/src/types/: chat.ts
scripts/: ground_truth.py  integration_test.py
tests/: __init__.py  conftest.py
tests/analysis/: __init__.py
tests/api/: __init__.py  test_app.py
tests/benchmarks/: __init__.py  test_benchmarks.py
tests/core/: __init__.py  test_catalogue.py  test_dsl.py  test_schema.py  test_validation.py
tests/tools/: __init__.py  test_tools.py
tests/visualization/: __init__.py  test_plots.py
