[project]
name = "atnf-chat"
version = "0.1.0"
description = "LLM-Powered Conversational Interface for ATNF Pulsar Catalogue Queries"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tom Kimpson" }]
requires-python = ">=3.11"
keywords = ["pulsar", "astronomy", "atnf", "llm", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    # Core data handling
    "psrqpy>=1.2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "astropy>=6.0",
    "scipy>=1.11",
    "tabulate>=0.9",  # Required for pandas.DataFrame.to_markdown()
    # Validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # LLM
    "anthropic>=0.40",
    "openai>=1.0.0",
    # Visualization
    "plotly>=5.18",
    "matplotlib>=3.8",
    # API
    "fastapi>=0.109",
    "uvicorn[standard]>=0.25",
    # Utilities
    "python-dotenv>=1.0",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pandas-stubs>=2.0",
    "types-requests>=2.31",
    "pre-commit>=3.6",
]

[project.scripts]
atnf-chat = "atnf_chat.cli:main"

[project.urls]
Homepage = "https://github.com/tomkimpson/atnf-chat"
Documentation = "https://github.com/tomkimpson/atnf-chat#readme"
Repository = "https://github.com/tomkimpson/atnf-chat"
Issues = "https://github.com/tomkimpson/atnf-chat/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atnf_chat"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["atnf_chat", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = ["atnf_chat"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "PLR2004"]

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["atnf_chat"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
